--- a/package.json
+++ b/package.json
@@ -9,19 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
-    "@react-navigation/native": "^7.1.18",
-    "@react-navigation/stack": "^7.5.0",
     "expo": "~54.0.7",
-    "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
-    "firebase": "^12.4.0",
     "react": "19.1.0",
-    "react-native": "0.81.4",
-    "react-native-maps": "1.20.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native": "0.81.4"
   },
   "private": true
 }
