Commit Canvis de main

--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-community/slider": "5.0.1",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/native": "^7.1.22",
+    "@react-navigation/native-stack": "^7.8.3",
     "expo": "~54.0.7",
+    "expo-av": "~16.0.7",
+    "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.6.0",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-maps": "1.20.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-segmented-control-tab": "^4.0.0"
   },
   "private": true
 }
